# othello-dxlib

./: CMakeLists.txt  THIRD-PARTY-LICENSES
src/: board.cpp  board.h  game.cpp  game.h  highlightable_text.cpp  highlightable_text.h  input_manager.cpp  input_manager.h  main.cpp  othello.cpp  othello.h  othello_ai.cpp  othello_ai.h  othello_player.cpp  othello_player.h  stone.cpp  stone.h  stone_type.h  title.cpp  title.h
